# observoor

./: .dockerignore  .gitignore  .golangci.yml  .goreleaser.yaml  CLAUDE.md  Cargo.toml  Cross.toml  Dockerfile  Dockerfile.clickhouse  Dockerfile.dev  Makefile  README.md  build.rs  docker-compose.yml  example.config.yaml  go.mod  go.sum  goreleaser-debian.Dockerfile
.github/workflows/: alpha-releases.yaml  cpu-accounting-e2e.yaml  cpu-bench.yaml  e2e-client-detection.yml  goreleaser.yaml  master-build.yaml  metrics-correctness.yaml  perf-gate.yaml  test-build.yaml
autoresearch/: program.md
autoresearch/results/: baseline.json
bench-cpu/: compare.py  mock-beacon.py  observoor-bench.yaml  run-bench.sh  stress-bench.c
benches/: hot_paths.rs
bpf/: observoor.c
bpf/headers/: vmlinux.h
bpf/include/: maps.h  observoor.h
cmd/observoor/: main.go
deploy/kubernetes/: daemonset.yaml
e2e/: docker-compose.yml
e2e/client-detection/: network-params.yaml  observoor.yaml.tmpl  smoke-tests.sh
e2e/configs/: clickhouse-init.sql  observoor.yaml  otel-collector-config.yaml
e2e/cpu-accounting/: docker-compose.yml  observoor.yaml.tmpl  validate.sh
e2e/kubernetes/: kind-config.yaml  network-params.yaml
e2e/scripts/: run-e2e-tests.sh  wait-for-sync.sh
internal/agent/: agent.go  config.go  config_test.go  ports.go
internal/beacon/: beacon.go  beacon_test.go  config.go
internal/clock/: clock.go  clock_test.go
internal/export/: clickhouse.go  health.go  health_test.go  otlp.go
internal/migrate/: migrate.go
internal/pid/: cgroup.go  config.go  discovery.go  process.go
internal/sink/: bucket.go  bucket_test.go  raw.go  raw_http.go  sink.go  slot.go  window.go
internal/tracer/: event.go  event_test.go  gen.go  objects_stub.go  stats.go  stats_test.go  tracer.go  tracer_linux.go  tracer_linux_parse_test.go  tracer_stub.go
internal/version/: version.go
scripts/: generate-vmlinux.sh  perf_gate.py
src/: config.rs  lib.rs  main.rs
src/agent/: mod.rs  ports.rs
src/beacon/: mod.rs
src/clock/: mod.rs
src/export/: health.rs  mod.rs
src/migrate/: mod.rs
src/pid/: mod.rs
src/sink/: mod.rs
src/tracer/: bpf.rs  event.rs  mod.rs  parse.rs  (+1 more)
tests/: blackbox_pipeline.rs  perf_alloc.rs
(+75 files in other folders)
